Added unit test for creating a contact and saving it to file